--- a/airline/templates/airline/base.html
+++ b/airline/templates/airline/base.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airline Management</title>
+    {% load i18n %}
+    <title>{% trans "Airline Management" %}</title>
     {% load static %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
@@ -30,45 +31,66 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'home' %}">
-                            <i class="fas fa-home me-1"></i>Home
+                            <i class="fas fa-home me-1"></i>{% trans "Home" %}
                         </a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle show" href="#" id="flightsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true">
-                            <i class="fas fa-plane-departure me-1"></i>Flights
+                            <i class="fas fa-plane-departure me-1"></i>{% trans "Flights" %}
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="flightsDropdown">
-                            <li><a class="dropdown-item" href="{% url 'flight_list' %}">Manage Flights</a></li>
-                            <li><a class="dropdown-item" href="{% url 'flight_list' %}">View Flights</a></li>
+                            <li><a class="dropdown-item" href="{% url 'flight_list' %}">{% trans "Manage Flights" %}</a></li>
+                            <li><a class="dropdown-item" href="{% url 'flight_list' %}">{% trans "View Flights" %}</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'passenger_list' %}">
-                            <i class="fas fa-users me-1"></i>Passengers
+                            <i class="fas fa-users me-1"></i>{% trans "Passengers" %}
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'reservation_list' %}">
-                            <i class="fas fa-ticket-alt me-1"></i>Reservations
+                            <i class="fas fa-ticket-alt me-1"></i>{% trans "Reservations" %}
                         </a>
                     </li>
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="languageDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fas fa-globe me-1"></i>{% trans "Language" %}
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdown">
+                            {% get_current_language as LANGUAGE_CODE %}
+                            {% get_available_languages as LANGUAGES %}
+                            {% get_language_info_list for LANGUAGES as languages %}
+                            {% for language in languages %}
+                            <li>
+                                <form action="{% url 'set_language' %}" method="post">
+                                    {% csrf_token %}
+                                    <input name="next" type="hidden" value="{{ request.get_full_path }}">
+                                    <button type="submit" name="language" value="{{ language.code }}" class="dropdown-item {% if language.code == LANGUAGE_CODE %}active{% endif %}">
+                                        {{ language.name_local }} ({{ language.code }})
+                                    </button>
+                                </form>
+                            </li>
+                            {% endfor %}
+                        </ul>
+                    </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle user-menu" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fas fa-user-circle me-1"></i>{{ user.username }}
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                            <li><h6 class="dropdown-header">Welcome back!</h6></li>
+                            <li><h6 class="dropdown-header">{% trans "Welcome back!" %}</h6></li>
                             <li><hr class="dropdown-divider"></li>
                             <li>
                                 <form action="{% url 'logout' %}" method="post" class="d-inline">
                                     {% csrf_token %}
                                     <button type="submit" class="dropdown-item">
-                                        <i class="fas fa-sign-out-alt me-2"></i>Logout
+                                        <i class="fas fa-sign-out-alt me-2"></i>{% trans "Logout" %}
                                     </button>
                                 </form>
                             </li>
@@ -77,12 +99,12 @@
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link btn-login" href="{% url 'login' %}">
-                            <i class="fas fa-sign-in-alt me-1"></i>Login
+                            <i class="fas fa-sign-in-alt me-1"></i>{% trans "Login" %}
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn-register" href="{% url 'register' %}">
-                            <i class="fas fa-user-plus me-1"></i>Register
+                            <i class="fas fa-user-plus me-1"></i>{% trans "Register" %}
                         </a>
                     </li>
                     {% endif %}
