--- a/airline/templates/registration/login.html
+++ b/airline/templates/registration/login.html
@@ -1,4 +1,5 @@
 {% extends 'airline/base.html' %}
+{% load i18n %}
 
 {% block content %}
 <!-- Login Hero Section -->
@@ -11,8 +12,8 @@
                         <div class="login-header">
                             <div class="logo-section">
                                 <i class="fas fa-plane"></i>
-                                <h2>Welcome Back</h2>
-                                <p>Sign in to your Airlines account</p>
+                                <h2>{% trans "Welcome Back" %}</h2>
+                                <p>{% trans "Sign in to your Airlines account" %}</p>
                             </div>
                         </div>
 
@@ -32,7 +33,7 @@
                                 <div class="form-group-modern">
                                     <label for="{{ form.username.id_for_label }}" class="form-label-modern">
                                         <i class="fas fa-user"></i>
-                                        {{ form.username.label }}
+                                        {% trans form.username.label %}
                                     </label>
                                     {{ form.username }}
                                     {% for error in form.username.errors %}
@@ -46,7 +47,7 @@
                                 <div class="form-group-modern">
                                     <label for="{{ form.password.id_for_label }}" class="form-label-modern">
                                         <i class="fas fa-lock"></i>
-                                        {{ form.password.label }}
+                                        {% trans form.password.label %}
                                     </label>
                                     {{ form.password }}
                                     {% for error in form.password.errors %}
@@ -68,15 +69,15 @@
                                 <div class="form-actions">
                                     <button type="submit" class="btn-login-modern">
                                         <i class="fas fa-sign-in-alt me-2"></i>
-                                        Sign In
+                                        {% trans "Sign In" %}
                                     </button>
                                 </div>
 
                                 <div class="form-footer">
-                                    <p>Don't have an account?
+                                    <p>{% trans "Don't have an account?" %}
                                         <a href="{% url 'register' %}" class="register-link">
                                             <i class="fas fa-user-plus me-1"></i>
-                                            Create Account
+                                            {% trans "Create Account" %}
                                         </a>
                                     </p>
                                 </div>
