Añadidas traducciones al español para las páginas de pasajeros

--- a/airline/templates/airline/passenger_confirm_delete.html
+++ b/airline/templates/airline/passenger_confirm_delete.html
@@ -1,11 +1,12 @@
 {% extends 'airline/base.html' %}
+{% load i18n %}
 
 {% block content %}
-<h1 class="mb-4">Delete Passenger</h1>
-<p>Are you sure you want to delete passenger "{{ passenger.first_name }} {{ passenger.last_name }}" (Document: {{ passenger.document_number }})?</p>
+<h1 class="mb-4">{% trans "Delete Passenger" %}</h1>
+<p>{% blocktrans %}Are you sure you want to delete passenger "{{ passenger.first_name }} {{ passenger.last_name }}" (Document: {{ passenger.document_number }})?{% endblocktrans %}</p>
 <form method="post">
     {% csrf_token %}
-    <button type="submit" class="btn btn-danger">Yes, Delete</button>
-    <a href="{% url 'passenger_list' %}" class="btn btn-secondary">Cancel</a>
+    <button type="submit" class="btn btn-danger">{% trans "Yes, Delete" %}</button>
+    <a href="{% url 'passenger_list' %}" class="btn btn-secondary">{% trans "Cancel" %}</a>
 </form>
 {% endblock %}
